--- a/src/components/Container/container.css
+++ b/src/components/Container/container.css
@@ -13,7 +13,7 @@
 .character-length {
   color: #e6e5ea;
   font-size: 20px;
-  width: 100%
+  width: 100%;
 }
 .numbers {
   color: #a4ffaf;
@@ -48,7 +48,7 @@ input[type="range"]::-webkit-slider-thumb {
 }
 input[type="range"]::-webkit-slider-thumb:hover {
   background: #18171f;
-  border: 2px solid #A4FFAF;
+  border: 2px solid #a4ffaf;
 }
 .boxes {
   display: flex;
@@ -56,21 +56,17 @@ input[type="range"]::-webkit-slider-thumb:hover {
   margin-top: 32px;
   row-gap: 16px;
 }
-.first-box, .second-box, .third-box, .fourth-box {
+.checkbox {
   width: 20px;
   height: 20px;
   background-color: #24232c;
   border: 2px solid #e6e5ea;
 }
 .box:hover {
-  border: 2px solid #a4ffaf; 
-  background: #18171F;
-
+  border: 2px solid #a4ffaf;
+  background: #18171f;
 }
-.first,
-.second,
-.third,
-.fourth {
+.container-box {
   display: flex;
   flex-direction: row;
   gap: 20px;
@@ -127,52 +123,69 @@ input[type="range"]::-webkit-slider-thumb:hover {
   width: 100%;
   margin-top: 28px;
   justify-content: center;
-  over
 }
-.generate-part:hover{
-  background-color: #24232C;
-  border: 2px solid #A4FFAF;
-  color: #A4FFAF;
+.generate-part:hover {
+  background-color: #24232c;
+  border: 2px solid #a4ffaf;
+  color: #a4ffaf;
 }
-.icon-arrow{
-    position: absolute;
-    left: 210px;
-    top: 22px
+.icon-arrow {
+  position: absolute;
+  left: 210px;
+  top: 22px;
 }
-.generate-part:hover .icon-arrow path{
+.generate-part:hover .icon-arrow path {
   fill: #a4ffaf;
 }
-@media (min-width:768px){
-
-  .main{
+@media (min-width: 768px) {
+  .main {
     width: 540px;
   }
-  .character-length{
+  .character-length {
     font-size: 22px;
-   position: absolute;
+    position: absolute;
   }
-  .first-box, .second-box, .third-box, .fourth-box{
+  .checkbox {
     margin-top: 4px;
   }
-  .text{
+  .text {
     font-size: 22px;
   }
-  .icon-arrow{
+  .icon-arrow {
     margin-left: 100px;
     margin-top: 0px;
   }
-  .dark-box{
+  .dark-box {
     height: 72px;
   }
-  .text-and-scale{
+  .text-and-scale {
     display: flex;
     align-items: center;
   }
-  .generate-part{
+  .generate-part {
     margin-bottom: 15px;
   }
-  .numbers{
+  .numbers {
     text-align: right;
     margin-left: auto;
   }
+}
+
+.checkbox {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.custom-checkbox {
+  width: 20px;
+  height: 20px;
+  border: 2px solid white;
+  background: black;
+  margin-top: 4px;
+}
+
+.checkbox:checked + .custom-checkbox {
+  background: green;
+  border: none;
 }
